--- a/data/module/Application/view/layout/front-layout.phtml
+++ b/data/module/Application/view/layout/front-layout.phtml
@@ -27,6 +27,7 @@ echo $this->doctype(); ?>
             ->prependStylesheet($assetPath . '/css/style.css?t=' . microtime())
             //->prependStylesheet($assetPath . '/css/bootstrap.css')
             ->prependStylesheet($assetPath . '/css/magnific-popup.css')
+            ->prependStylesheet($assetPath . '/css/tiny-slider.css')
             ->prependStylesheet($assetPath . '/css/simple-line-icons.css')
             ->prependStylesheet($assetPath . '/css/icomoon.css')
             ->prependStylesheet($assetPath . '/css/animate.css')
