--- a/html/absconsultor/css/style.css
+++ b/html/absconsultor/css/style.css
@@ -6586,7 +6586,7 @@ h1, h2, h3, h4, h5, h6 {
       text-decoration: none !important; }
 
 .abstpl-person {
-  padding: 150px 30px 30px 30px;
+  /*padding: 50px 0 30px 0;*/
   float: left;
   width: 100%;
   position: relative;
@@ -6595,15 +6595,16 @@ h1, h2, h3, h4, h5, h6 {
     .abstpl-person {
       margin-bottom: 3.5em; } }
   .abstpl-person figure {
-    position: absolute;
+    /*position: absolute;*/
     margin-top: 0px;
     top: 0;
-    left: 50%;
-    margin-left: -90px;
+    /*text-align: left;*/
+    /*left: 50%;*/
+    margin-left: -35px;
     display: block;
     margin-bottom: 50px; }
     .abstpl-person figure img {
-      width: 180px;
+      width: 230px;
       -webkit-border-radius: 50%;
       -moz-border-radius: 50%;
       -ms-border-radius: 50%;
