--- a/data/module/Application/view/layout/front-layout.phtml
+++ b/data/module/Application/view/layout/front-layout.phtml
@@ -23,7 +23,7 @@ echo $this->doctype(); ?>
         ?>
 
         <!-- Le styles -->
-        <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.jpg'))
+        <?php echo $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.jpg'])
             ->prependStylesheet($assetPath . '/css/style.css?t=' . microtime())
             //->prependStylesheet($assetPath . '/css/bootstrap.css')
             ->prependStylesheet($assetPath . '/css/magnific-popup.css')
