--- a/html/accessories/css/custom.css
+++ b/html/accessories/css/custom.css
@@ -31,3 +31,49 @@
     font-size: 16px;
     margin-bottom: 0px;
     padding-bottom: 0; }
+
+.social {
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    position: relative;
+    width: 100%; }
+.social li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: inline-block; }
+.social li a {
+    font-size: 16px;
+    display: table;
+    width: 40px;
+    height: 40px;
+    margin: 0 4px; }
+.social li a i {
+    display: table-cell;
+    vertical-align: middle; }
+.social li a:hover, .social li a:active, .social li a:focus {
+    text-decoration: none;
+    border-bottom: none; }
+.social li a.social-box {
+    background: #000;
+    color: #fff; }
+.social li a.social-circle {
+    background: #000;
+    color: #fff;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%; }
+.social li a:hover {
+    background: #393e46 !important; }
+.social.social-box a {
+    background: #000;
+    color: #fff; }
+.social.social-circle a {
+    background: #000;
+    color: #fff;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%; }
