--- a/html/absconsultor/css/style.css
+++ b/html/absconsultor/css/style.css
@@ -5963,6 +5963,10 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 1;
   top: 0;
   margin-top: 40px; }
+  #abstpl-header img.main-logo {
+    display: none; }
+  #abstpl-header.navbar-fixed-top .navbar-brand img.main-logo {
+    display: block; }
   @media screen and (max-width: 768px) {
     #abstpl-header {
       margin-top: 0;
