Styles Validation messages

--- a/data/module/Application/view/layout/front-layout.phtml
+++ b/data/module/Application/view/layout/front-layout.phtml
@@ -52,8 +52,10 @@ echo $this->doctype(); ?>
                     <!-- Mobile Toggle Menu Button -->
                     <a id="js-abstpl-nav-toggle" class="js-abstpl-nav-toggle abstpl-nav-toggle" data-toggle="collapse" data-target="#navbar"
                        aria-expanded="false" aria-controls="navbar"><i></i></a>
-                    <a class="navbar-brand gotop" href="#">
+                    <a class="navbar-brand gotop"" href="#">
                         <img src="<?=$assetPath . '/images/logo.png';?>" alt="company-logo" class="main-logo">
+                    </a>
+                    <a class="navbar-brand secondary"  href="#">
                         <img src="<?=$assetPath . '/images/logo2.png';?>" alt="company-logo" class="secondary-logo">
                     </a>
                 </div>
