--- a/data/module/Administrator/view/layout/error.phtml
+++ b/data/module/Administrator/view/layout/error.phtml
@@ -1,2 +1,5 @@
 <?php
-var_dump($this->exception);
+
+var_dump($this->exception->getMessage());
+var_dump($this->exception->getLine());
+var_dump($this->exception->getFile());
