--- a/data/module/Application/view/layout/accessories-layout.phtml
+++ b/data/module/Application/view/layout/accessories-layout.phtml
@@ -64,7 +64,7 @@ $socialIconHelper = $this->socialIconHelper();
                             <div class="header-logo">
                                 <a href="/">
                                     <img alt="Bravo Silva Consultoria Tecnica" height="75" data-sticky-height="75"
-                                         data-sticky-top="0" src="<?= $assetPath . '/img/logo.png'; ?>">
+                                         data-sticky-top="0" src="<?= $assetPath . '/img/logo2.png'; ?>">
                                 </a>
                             </div>
                         </div>
