--- a/html/absconsultor/css/style.css
+++ b/html/absconsultor/css/style.css
@@ -6831,10 +6831,10 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
   height: 44px;
   width: 25px;
-  border-bottom: none !important;
-  /*@media screen and (max-width: $screen-sm) {
-    display: block;
-  }*/ }
+  border-bottom: none !important; }
+  @media screen and (min-width: 768px) {
+    .abstpl-nav-toggle {
+      display: none; } }
 
 #footer {
   padding: 50px 0;
