--- a/data/module/Application/view/application/home/index.phtml
+++ b/data/module/Application/view/application/home/index.phtml
@@ -43,7 +43,7 @@ $legalMessage = $this->legal['locale'][$this->lang][$legalLocaleId]['content'];
                 <div class="abstpl-text">
                     <i class="abstpl-intro-icon icon-bulb"></i>
                     <h2>Supervisión y Asesoría</h2>
-                    <p>Asesoramiento completo en proyectos complejos e inspecciones, en relación a grúas portuarias.</p>
+                    <p class="intro-service">Asesoramiento completo en proyectos complejos e inspecciones, en relación a grúas portuarias.</p>
                     <p><a href="#" class="btn btn-primary more-info">Más Información</a></p>
                 </div>
             </div>
@@ -54,7 +54,7 @@ $legalMessage = $this->legal['locale'][$this->lang][$legalLocaleId]['content'];
                 <div class="abstpl-text">
                     <i class="abstpl-intro-icon icon-wrench"></i>
                     <h2>Reparaciones y Montajes</h2>
-                    <p>Realizamos montajes completos de cualquier grúa y todo tipo de reparaciones con los mejores
+                    <p class="intro-service">Realizamos montajes completos de cualquier grúa y todo tipo de reparaciones con los mejores
                         equipos y garantías.</p>
                     <p><a href="#" class="btn btn-primary more-info">Más Información</a></p>
                 </div>
@@ -66,7 +66,7 @@ $legalMessage = $this->legal['locale'][$this->lang][$legalLocaleId]['content'];
                 <div class="abstpl-text">
                     <i class="abstpl-intro-icon icon-rocket"></i>
                     <h2>Repuestos y Fabricación</h2>
-                    <p>Suministro de repuestos de grúas de cualquier marca. Mejoramos la calidad tanto en materiales
+                    <p class="intro-service">Suministro de repuestos de grúas de cualquier marca. Mejoramos la calidad tanto en materiales
                         como en diseño.</p>
                     <p><a href="#" class="btn btn-primary more-info">Más Información</a></p>
                 </div>
